# hello_action_cpp

./: CMakeLists.txt  releasenotes.md  vcpkg.json
.github/workflows/: hosted-ninja-vcpkg_submod.yml  main.yml  release.yml
cmakepresets/: CMakeLists.txt  test_main.cpp
